# pyhalboy

./: .envrc  .gitignore  .tool-versions  LICENSE.md  README.md  Readme.md  __init__.py  navigator.py  pyproject.toml  requirements.txt  resource.py  setup.cfg  setup.py
pyhalboy/: navigator.py
src/pyhalboy/: __init__.py  navigator.py  resource.py  types.py
test/: test_navigator.py  test_navigator_get.py  test_navigator_post.py  test_resource.py
