[project]
requires-python = ">=3.13"

[tool.poetry]
name = "pyhalboy"
version = "1.1.0"
description = "Halboy port to python for everything HAL related."
authors = [
    "Bamdad Dashtban <bamdadd@gmail.com>",
    "Jonas Svalin <jonassvalin@gmail.com>",
    "Toby Clemson <tobyclemson@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
uritemplate = "^4.1.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
poethepoet = "^0.29.0"
pyright = "^1.1.383"
pytest = "^8.3.3"
respx = "^0.21.1"

[tool.pyright]
include = ["src", "test"]
strict = ["src"]
reportMissingTypeStubs = "error"

[tool.ruff]
line-length = 79

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--strict-markers"]

[tool.poe.tasks]
lint-check = "ruff check"
lint-fix = "ruff check --fix"
format-check = "ruff format --check"
format-fix = "ruff format"
type-check = "pyright"
test = "pytest"
precommit = ["lint-fix", "format-fix", "type-check", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
